--- a/vm_setup.ipynb
+++ b/vm_setup.ipynb
@@ -106,8 +106,8 @@
    "outputs": [],
    "source": [
     "protectedSettings=\"\"\"{\n",
-    "    \"fileUris\": [\"https://raw.githubusercontent.com/loomlike/loomlike.github.io/master/vm_setup.sh\"],\n",
-    "    \"commandToExecute\": \"./vm_setup.sh\"\n",
+    "    \"fileUris\": [\"https://raw.githubusercontent.com/loomlike/vm_setup/master/setup_vm.sh\"],\n",
+    "    \"commandToExecute\": \"./setup_vm.sh\"\n",
     "}\"\"\""
    ]
   },
